--- a/.github/workflows/stale.yaml
+++ b/.github/workflows/stale.yaml
@@ -9,4 +9,4 @@ on:
 
 jobs:
   workflows:
-    uses: hassio-addons/workflows/.github/workflows/stale.yaml@main
+    uses: erik73/workflows/.github/workflows/stale.yaml@main
