--- a/phpmyadmin/build.yaml
+++ b/phpmyadmin/build.yaml
@@ -1,8 +1,6 @@
 ---
 build_from:
-  aarch64: ghcr.io/hassio-addons/base:17.2.4
-  amd64: ghcr.io/hassio-addons/base:17.2.4
-  armv7: ghcr.io/hassio-addons/base:17.2.4
-codenotary:
-  base_image: codenotary@frenck.dev
-  signer: codenotary@frenck.dev
+  aarch64: ghcr.io/erik73/base:4.0.8
+  amd64: ghcr.io/erik73/base:4.0.8
+  armv7: ghcr.io/erik73/base:4.0.8
+
